--- a/FreeWork.csproj
+++ b/FreeWork.csproj
@@ -243,10 +243,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Demigiant\DOTweenPro\DOTweenAnimation.cs" />
+    <Compile Include="Assets\Hero.cs" />
     <Compile Include="Assets\Script\Btn_Option.cs" />
     <Compile Include="Assets\Script\CollisionCondition.cs" />
     <Compile Include="Assets\Script\GetCollider.cs" />
-    <Compile Include="Assets\Script\Hero.cs" />
     <Compile Include="Assets\Script\MonoSingletion.cs" />
     <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\ImportBehaviour.cs" />
     <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\SortingLayerExposed.cs" />
